calculation modifications done

--- a/invoice_dashboard.html
+++ b/invoice_dashboard.html
@@ -368,7 +368,7 @@
                                 <div class="div-5">Place of Supply : </div>
                             </div>
                             <div class="right">
-                                <div class="div-1" style="margin-bottom: 14px;">
+                                <div class="div-1" style="margin-bottom: 4px;">
                                     <textarea v-model="invoice.HeadName"></textarea>
                                 </div>
                                 <div class="div-2" style="margin-bottom: 9px;">
@@ -387,16 +387,19 @@
                         </div>
                         <div class="gr-box gr-box-8 flex" style="grid-area: item-8">
                             <div class="left">
-                                <div class="div-1" style="font-size:20px;">KALAIKADHIR </div>
-                                <div class="div-2">Agency Code : </div>
+                                <div class="div-1" style="font-size:20px;">
+                                    KALAIKADHIR
+                                </div>
                                 <div class="div-3">R.O.No : </div>
                                 <div class="div-4">R.O.Date : </div>
-                                <div class="div-5" style="margin-bottom: 36px;">Product : </div>
+                                <div class="div-5" style="margin-bottom: 63px;">Product : </div>
                                 <div class="div-6">Key No : </div>
                                 <div class="div-7">Caption : </div>
                             </div>
                             <div class="right">
-                                <div class="age-code">AAS185</div>
+                                <div style="margin: 5px 0px 4px 10px;">
+                                    Agency Code : AAS185
+                                </div>
                                 <div>
                                     <input type="text" v-model="invoice.RONo">
                                 </div>
