ui changes done

--- a/invoice_dashboard.html
+++ b/invoice_dashboard.html
@@ -437,7 +437,7 @@
                             Amount
                         </div>
                         <div class="gr-box gr-box-15 flex" style="grid-area: item-15;">
-                            <input type="text" v-model="invoice.Date">
+                            <input type="text" v-model="invoice.Date" style="text-align: center;">
                         </div>
                         <div class="gr-box gr-box-16 flex" style="grid-area: item-16;">
                             <input type="text" v-model="invoice.SizeWidth" style="text-align: right;">
@@ -445,13 +445,13 @@
                             <input type="text" v-model="invoice.SizeHeight" style="text-align: left;">
                         </div>
                         <div class="gr-box gr-box-17 flex" style="grid-area: item-17;">
-                            <input type="text" v-model="invoice.AreaOfEdition">
+                            <input type="text" v-model="invoice.AreaOfEdition" style="text-align: center;">
                         </div>
                         <div class="gr-box gr-box-18 flex" style="grid-area: item-18;">
-                            <input type="text" v-model="invoice.PagePosition">
+                            <input type="text" v-model="invoice.PagePosition" style="text-align: center;">
                         </div>
-                        <div class="gr-box gr-box-19 flex" style="grid-area: item-19;" style="text-align: center;">
-                            <input type="text" v-model="invoice.Rate">
+                        <div class="gr-box gr-box-19 flex" style="grid-area: item-19;">
+                            <input type="text" v-model="invoice.Rate" style="text-align: center;">
                         </div>
                         <div class="gr-box gr-box-20 flex" style="grid-area: item-20;">
                             <input type="text" v-model="invoice.initialTotal" style="text-align: right;">
