font changes done

--- a/invoice_dashboard.html
+++ b/invoice_dashboard.html
@@ -508,7 +508,7 @@
                     </div>
                 </div>
                 <div class="row bg-white mb-2 p-3" style="border-radius: 5px;margin:0px;">
-                    <div class="col-12 col-md-6 col-xl-6 mb-2">
+                    <div class="col-12 col-xl-6 mb-2">
                         <button v-on:click="temp()" class="btns-download flex gap-2">
                             <iconify-icon icon="ic:baseline-download" style="font-size: 25px;"></iconify-icon>
                             Download Invoice
