small changes done

--- a/invoice_dashboard.html
+++ b/invoice_dashboard.html
@@ -180,10 +180,10 @@
                     </div>
                 </div>
                 <div class="row my-4">
-                    <div class="col-12 col-xl-5">
+                    <div class="col-12 col-xl-5 mb-2">
                         Total Invoice Count : <span class="fw-bold">{{invoiceTotalData.length}}</span>
                     </div>
-                    <div class="col-12 col-xl-7">
+                    <div class="col-12 col-xl-7 mb-2">
                         <div class="pagination">
                             <button title="First Page" v-on:click="goToPage(1)" :disabled="currentPage === 1">
                                 <iconify-icon icon="material-symbols:first-page"></iconify-icon>
@@ -223,7 +223,7 @@
             <div class="main-body p-3">
                 <div class="row bg-white mb-2 p-3" style="border-radius: 5px;margin:0px;">
                     <div class="col-12 col-xl-8 mb-2">
-                        <h4 class="mt-2">Dynamic Invoice Report</h4>
+                        <h4 class="mt-2">Dynamic Invoice</h4>
                     </div>
                     <div class="col-12 col-xl-2 mb-2 flex">
                         <button class="add-invoice-btn flex gap-2" title="Add Invoice"
