css style changes done

--- a/invoice_dashboard.html
+++ b/invoice_dashboard.html
@@ -465,7 +465,7 @@
                         </div>
                         <div class="gr-box gr-box-21 flex" style="grid-area: item-21;">
                             <div class="left flex">
-                                <div style="color:#00b050">Product Discount &nbsp;&nbsp;&nbsp;
+                                <div class="flex" style="color:#00b050">Product Discount &nbsp;&nbsp;&nbsp;
                                     <span id="powerDiscount" contenteditable>{{invoice.Discount}}</span> %
                                 </div>
                                 <div>Amount</div>
