--- a/index.html
+++ b/index.html
@@ -4,77 +4,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SSA Dashboard</title>
+    <title>SSA Invoice</title>
+
+    <!-- Bootstrap CSS CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+    <!-- Select2 CSS CDN -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
+
+    <!-- Notyf CSS CDN -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
+
+    <link rel="stylesheet" href="/resources/css/style.css">
+    <link rel="stylesheet" href="/resources/css/login.css">
+    <link rel="stylesheet" href="/resources/css/main.css">
+
 </head>
 
 <body>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-        * {
-            margin: 0px;
-            padding: 0px;
-            box-sizing: border-box;
-            font-family: "Poppins", sans-serif;
-        }
-
-        .container {
-            width: 100dvw;
-            height: 100dvh;
-        }
-
-        .flex {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        a {
-            text-decoration: none;
-            background-color: #34495e;
-            color: white;
-            padding: 10px 15px;
-            font-size: 20px;
-            border-radius: 5px;
-        }
-
-        a:hover {
-            background-color: #28394b;
-        }
-    </style>
-
-    <div id="app" class="container flex">
-        <a href="invoice_dashboard.html">Go to Invoice Dashboard</a>
+    <div class="container-fluid p-0" id="app" style="overflow: hidden;">
+        <router-view v-cloak></router-view>
     </div>
 
-    <!-- Confetti JS CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
+    <!-- Firebase App JS CDN -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 
-    <!-- Vue JS CDN -->
+    <!-- Firebase Database JS CDN -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+
+    <!-- JSPDF JS CDN's -->
+    <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.6/jspdf.plugin.autotable.min.js"></script>
+
+    <!-- Excel JS CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/exceljs/4.3.0/exceljs.min.js"></script>
+
+    <!-- html2canvas CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+
+    <!-- Linq JS CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/linq.js/3.2.2/linq.min.js"></script>
+
+    <!-- Jquery JS CDN -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+    <!-- Notyf JS CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
+
+    <!-- Sweet Alert JS CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <!-- Iconify Icon JS CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
+
+    <!-- Bootstrap JS CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Select 2 JS CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
+
+    <!-- Disable Dev Tools -->
+    <script src='https://cdn.jsdelivr.net/npm/disable-devtool'></script>
+
+    <!-- Moment JS CDN -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+
+    <!-- Vue JS -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
-    
+
+    <!-- Vue Router JS CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/vue-router@3"></script>
+
+    <script src="components/login.js"></script>
+    <script src="components/main.js"></script>
+
+    <script src="router.js"></script>
+    <script src="app.js"></script>
     <script>
-        var vm = new Vue({
-            el: '#app',
-            data: {
-
-            },
-            computed: {
-
-            },
-            methods: {
-
-            },
-            watch: {
-
-            },
-            mounted() {
-
-            },
-            created() {
-
-            },
-        });
+        DisableDevtool();
     </script>
 </body>
 
